--- a/interface/package.json
+++ b/interface/package.json
@@ -19,6 +19,7 @@
     "graphql-tag": "^2.12.5",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.7",
+    "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
