--- a/interface/package.json
+++ b/interface/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.8",
     "@braid/vue-formulate": "^2.5.2",
     "core-js": "^3.6.5",
     "ethers": "^5.4.4",
