--- a/interface/package.json
+++ b/interface/package.json
@@ -13,8 +13,7 @@
     "core-js": "^3.6.5",
     "ethers": "^5.4.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.2",
-    "vuex": "^3.6.2"
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
