--- a/interface/package.json
+++ b/interface/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.8",
     "@braid/vue-formulate": "^2.5.2",
+    "@metamask/detect-provider": "^1.2.0",
     "core-js": "^3.6.5",
     "ethers": "^5.4.4",
     "vue": "^2.6.11",
