--- a/interface/package.json
+++ b/interface/package.json
@@ -11,10 +11,13 @@
     "@apollo/client": "^3.4.8",
     "@braid/vue-formulate": "^2.5.2",
     "@metamask/detect-provider": "^1.2.0",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
     "core-js": "^3.6.5",
     "ethers": "^5.4.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.2"
+    "vue-awesome": "^4.3.1",
+    "vue-router": "^3.5.2",
+    "vue-spinner": "^1.0.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
