--- a/interface/package.json
+++ b/interface/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "core-js": "^3.6.5",
     "ethers": "^5.4.7",
+    "graphql": "^15.6.0",
     "vue": "^2.6.11",
     "vue-awesome": "^4.3.1",
     "vue-router": "^3.5.2",
