--- a/interface/package.json
+++ b/interface/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "ethers": "^5.4.7",
     "graphql": "^15.6.0",
+    "tailwindcss-image-rendering": "^1.0.2",
     "vue": "^2.6.11",
     "vue-awesome": "^4.3.1",
     "vue-router": "^3.5.2",
